--- a/qauzzu/index.html
+++ b/qauzzu/index.html
@@ -16,7 +16,48 @@
 
 <body>
   <!-- Header -->
-  
+  <header class="main-header">
+    <nav class="transparent">
+      <div class="container">
+        <div class="nav wrapper">
+          <a href="#" class="brand-logo">Quazzu</a>
+          <a href="#" class="button-collapse">
+            <i class="fa fa-bars"></i>
+          </a>
+          <ul class="right hide-on-med-and-down">
+            <li>
+              <a href="index.html" class="active-link">Home</a>
+            </li>
+            <li>
+              <a href="solution.html">Solutions</a>
+            </li>
+            <li>
+              <a href="signup.html"
+              class="active-link">Sign Up</a>
+            </li>
+            <li>
+              <a href="index.html" class="btn purple">Login</a>
+            </li>
+            <li>
+              <a href="https://facebook.com">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+                <a href="https://twitter.com">
+                  <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com">
+                  <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
