--- a/qauzzu/index.html
+++ b/qauzzu/index.html
@@ -26,14 +26,13 @@
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
-              <a href="index.html">Home</a>
+              <a href="index.html" class="active-link">Home</a>
             </li>
             <li>
               <a href="solutions.html">Solutions</a>
             </li>
             <li>
-              <a href="signup.html"
-              class="active-link">Sign Up</a>
+              <a href="signup.html">Sign Up</a>
             </li>
             <li>
               <a href="#login-modal" class="btn purple modal-trigger">Login</a>
